# BatchStats

./: .gitignore  LICENSE  README.md  pyproject.toml  readthedocs.yml  setup.py
.github/workflows/: publish-to-pypi.yml  pytest.yml  python-package.yml  ruff-format-pr.yml
batchstats/: __init__.py  _misc.py  core.py  nanstats.py  stats.py
batchstats/base/: __init__.py  batch_nan_stat.py  batch_stat.py
batchstats/nanstats/: __init__.py  nan_max.py  nan_mean.py  nan_min.py  nan_peak_to_peak.py  nan_sum.py
batchstats/stats/: __init__.py  corr.py  cov.py  max.py  mean.py  min.py  peak_to_peak.py  std.py  sum.py  var.py  weighted_mean.py  weighted_sum.py
docs/: environment.yml
docs/source/: api.rst  api_reference.rst  conf.py  core_classes.rst  future.rst  incremental_computing.rst  index.rst  installation.rst  nan_handling_classes.rst  nan_stats.rst  stats.rst
docs/source/_templates/: layout.html  page.html
tests/: test_axis.py  test_core.py  test_merge.py  test_nanstats.py  test_stats.py  test_weighted_stats.py
